package CSAA.CSAA;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class CsaaApplication {

	public static void main(String[] args) {
		SpringApplication.run(CsaaApplication.class, args);
	}

}
